docs: fix documentation
