# docs/swagger.yaml
@@ -105,7 +105,7 @@ paths:
       - application/json
       description: Delete a new job opening
       parameters:
-      - description: Open identification
+      - description: Opening identification
         in: query
         name: id
         required: true
@@ -125,14 +125,15 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/handler.ErrorResponse'
+      summary: Delete opening
       tags:
       - Openings
     get:
       consumes:
       - application/json
-      description: Show a new job opening
+      description: Show a job opening
       parameters:
-      - description: Open identification
+      - description: Opening identification
         in: query
         name: id
         required: true
@@ -181,6 +182,7 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/handler.ErrorResponse'
+      summary: Create opening
       tags:
       - Openings
     put:
@@ -233,12 +235,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/handler.ListOpeningsResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/handler.ErrorResponse'
-        "404":
-          description: Not Found
+        "500":
+          description: Internal Server Error
           schema:
             $ref: '#/definitions/handler.ErrorResponse'
       summary: List openings
